--- a/src/components/HabitCard/HabitCard.css
+++ b/src/components/HabitCard/HabitCard.css
@@ -1,6 +1,8 @@
 .card {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
     width: 25%;
     border: 1px solid white;
     border-radius: 3px;
@@ -9,6 +11,9 @@
     background: grey;
     border-radius: 3px;
     height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .card-img-container,
 .card-info-container {
